# patine

./: Cargo.toml  Dockerfile  LICENSE  README.md  create-mailbox.sh  remove-mailbox.sh
src/: command.rs  commands.rs  connection.rs  io.rs  mail.rs  main.rs  request.rs  response.rs  server.rs  smtp_state.rs  storage.rs
src/command/: command_handler.rs  handlers.rs  smtp_command.rs
src/command/handlers/: auth_handler.rs  data_end_handler.rs  data_handler.rs  ehlo_handler.rs  helo_handler.rs  mail_handler.rs  noop_handler.rs  quit_handler.rs  rcpt_handler.rs  registry.rs  rset_handler.rs  starttls_handler.rs  vrfy_handler.rs
src/commands/: codec_state.rs  command.rs  data.rs  ehlo.rs  helo.rs  mail.rs  noop.rs  quit.rs  rset.rs  smtp_codec.rs  smtp_command.rs  smtp_response.rs
src/connection/: commands.rs
src/connection/commands/: command.rs  ehlo.rs  rcpt.rs  vrfy.rs
src/io/: asyncio.rs  client.rs  codec_state.rs  delivery.rs  dns.rs  server.rs  smtp_client_codec.rs  smtp_codec.rs  smtp_server_codec.rs  smtp_state.rs  tls.rs  transaction.rs  transaction_type.rs
src/server/: server.rs  transaction.rs
src/storage/: maildir.rs  service.rs
