[package]
name = "patine"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
futures = "0.3.31"
once_cell = "1.21.3"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rand = "0.9.1"
regex = "1.11.1"
webpki-roots = "1.0.0"
tokio-rustls = "0.26.2"
dotenv = "0.15.0"
